<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_0"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_marginBottom="20dp" />


    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/even"
        android:layout_marginBottom="20dp" />


    <Button
        android:id="@+id/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increase_counter"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/openSecondActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/openFormActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_form"
        android:layout_marginBottom="10dp"
       />
    <Button
        android:id="@+id/openListViewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="List"
        />



</LinearLayout>
